<resources>
    <string name="app_name">GUIAD - Estadísticas</string>
    <string name="no_data_selected">Seleccione un dato para ver detalles</string>
    <string name="select_a_stat">Seleccione un dato para ver detalles</string>

    <string name="city">Departamento</string>
    <string name="stat">Dato</string>
    <string name="general_data">Datos generales</string>
    <string name="cti_data">CTI</string>
    <string name="data_by_city">Por departamento</string>
    <string name="deceases_stats">Fallecidos</string>
    <string name="p7_stats">Estadísticas p7</string>
    <string name="data_by_date">Datos por fecha</string>
    <string name="mobility_stats">Movilidad</string>
    <string name="stats_and_charts"><![CDATA[Estadísticas & Gráficas]]></string>
    <string name="credits">Créditos</string>
    <string name="refresh">Refresh</string>
    <string name="data_fetch_error_message">Error al actualizar los datos</string>
    <string name="retry">Reintentar</string>
    <string name="cancel">Cancelar</string>
    <string name="fetching_data">Actualizando datos…</string>
    <string name="date">Fecha</string>

    <!-- Screens titles -->
    <string name="mobility_data_title">Datos de movilidad</string>
    <string name="credits_title">Créditos</string>
    <string name="pt_stats_title">Estadísticas p7</string>
    <string name="deceases_stats_title">Estadísticas de fallecidos</string>
    <string name="general_stats_title">Estadísticas generales</string>
    <string name="cti_stats_title">Datos CTI</string>
    <string name="data_by_city_stats_title">Datos por departamento</string>

    <string name="today">Hoy</string>
    <string name="view_more">Ver más</string>
    <string name="ok">Entendido</string>
    <string name="rotate_device_disclaimer">Gira tu dispositivo para visualizar mejor las gráficas</string>
    <string name="not_available">N/A</string>
    <string name="data_limit">Rango</string>
    <string name="building_chart">Esperando datos…</string>

    <!-- Accessibility messages -->
    <string name="error_icon">Ícono de error</string>
    <string name="data_fetch_success">Carga de datos exitosa</string>
    <string name="back_1_day">Retroceder 1 día</string>
    <string name="back_1_month">Retroceder 1 mes</string>
    <string name="forward_1_day">Avanzar 1 día</string>
    <string name="forward_1_month">Avanzar 1 mes</string>
    <string name="chart">Gráfico</string>
    <string name="rotate_device_icon">Ícono girar dispositivo</string>
    <string name="stat_icon">Ícono de dato en cuestión</string>
    <string name="trend_icon">Ícono indicador a la suba o a la baja</string>
    <string name="data_vaccine_by_segment_title">Vacunas por segmento</string>
    <string name="vaccines">Vacunas</string>
    <string name="vaccines_by_segment">Vacunas por segmento</string>
    <string name="vaccines_by_age">Vacunas por edad</string>
    <string name="data_vaccine_by_age_title">Vacunación por edad</string>
    <string name="vaccination_global_data_title">Vacunación: Datos generales</string>
    <string name="vaccination_by_city_data_title">Vacunas por departamento</string>
    <string name="line_chart_type">Gráfico de líneas</string>
    <string name="last_data_date">Último dato: %1$s</string>
    <string name="done">Listo</string>

    <string name="select">Click aquí para seleccionar</string>
    <!-- Plurals -->
    <plurals name="selected_stats">
        <item quantity="one">%d seleccionado</item>
        <item quantity="other">%d seleccionados</item>
    </plurals>
</resources>