<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/stat_card_background"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ImageView
        android:id="@+id/stat_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/stat_icon"
        app:layout_constraintBottom_toBottomOf="@+id/stat_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stat_name"
        tools:src="@drawable/ic_cti" />

    <TextView
        android:id="@+id/stat_name"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/stat_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="CTI" />

    <ImageView
        android:id="@+id/stat_trend_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/trend_icon"
        app:layout_constraintBottom_toBottomOf="@+id/stat_latest_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stat_latest_value"
        tools:src="@drawable/ic_trend_up" />

    <TextView
        android:id="@+id/stat_latest_value"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/not_available"
        app:layout_constraintStart_toEndOf="@+id/stat_trend_icon"
        app:layout_constraintTop_toBottomOf="@+id/stat_name"
        tools:text="541" />

    <TextView
        android:id="@+id/stat_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/not_available"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/chart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stat_latest_value"
        tools:text="Pacientes internados" />

    <TextView
        android:id="@+id/view_more_button"
        style="@style/TextAppearance.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/stat_card_button_background"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:text="@string/view_more"
        android:textAllCaps="false"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stat_label" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/background_color_33"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_more_button"
        app:layout_constraintTop_toBottomOf="@+id/stat_name" />

</merge>