<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/city"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cities_selector"
        app:layout_constraintEnd_toStartOf="@+id/cities_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cities_selector" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/cities_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@+id/city_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stat_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/stat_selector"
        app:layout_constraintEnd_toEndOf="@+id/city_label"
        app:layout_constraintTop_toTopOf="@+id/stat_selector" />

    <TextView
        android:id="@+id/stat_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@+id/cities_selector"
        app:layout_constraintTop_toBottomOf="@+id/cities_selector" />

    <TextView
        android:id="@+id/data_limit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_limit"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/data_limit_selector_container"
        app:layout_constraintEnd_toEndOf="@+id/city_label"
        app:layout_constraintTop_toTopOf="@+id/data_limit_selector_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/data_limit_selector_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/chart_type_selector"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/cities_selector"
        app:layout_constraintTop_toBottomOf="@+id/stat_selector">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/data_limit_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.nerdscorner.guiad.stats.ui.custom.ChartTypeSelector
        android:id="@+id/chart_type_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/data_limit_selector_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/data_limit_selector_container" />

    <FrameLayout
        android:id="@+id/charts_container_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/background_color_33"
        app:layout_constraintBottom_toTopOf="@+id/legends_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_limit_selector_container">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <com.nex3z.flowlayout.FlowLayout
        android:id="@+id/legends_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_33"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
